# RoboRTS

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING  COPYING.txt  README.md  license.txt  package.xml
common/: CMakeLists.txt  algorithm_factory.h  bind_this.h  error_code.h  io.h  log.h  macro.h  main_interface.h  node_state.h  rrts.cpp  rrts.h  timer.h
common/example/: CMakeLists.txt  example_algorithm.cpp  example_algorithm.h  example_base.h  example_client.cpp  example_node.cpp  example_node.h
modules/decision/: CMakeLists.txt  decision_node.cpp  decision_test.cpp
modules/decision/ICRA_decision/: action_behavior.h  decision_node.cpp  goal_factory.h
modules/decision/behavior_tree/: CMakeLists.txt  behavior_decision_sim_node.cpp  behavior_node.h  behavior_tree.h  blackboard.h  condition_behavior.h  planner_behavior.h
modules/decision/config/: decision.prototxt
modules/decision/proto/: decision.pb.cc  decision.pb.h  decision.proto
modules/decision/test_decision/: action_behavior.h  decision_node.cpp  goal_factory.h
roborts/: package.xml
roborts_base/: CMakeLists.txt  package.xml  roborts_base_config.h  roborts_base_node.cpp  ros_dep.h
roborts_base/chassis/: chassis.cpp  chassis.h
roborts_base/config/: roborts_base_parameter.yaml
roborts_base/gimbal/: gimbal.cpp  gimbal.h
roborts_base/referee_system/: referee_system.cpp  referee_system.h
roborts_base/roborts_sdk/: sdk.h
roborts_base/roborts_sdk/dispatch/: dispatch.h  execution.cpp  execution.h  handle.cpp  handle.h
roborts_base/roborts_sdk/hardware/: hardware_interface.h  serial_device.cpp  serial_device.h
roborts_base/roborts_sdk/protocol/: protocol.cpp  protocol.h  protocol_define.h
roborts_base/roborts_sdk/test/: sdk_test.cpp
roborts_base/roborts_sdk/utilities/: circular_buffer.h  crc.h  log.h  memory_pool.h
roborts_bringup/: CMakeLists.txt  package.xml
roborts_bringup/launch/: base.launch  mapping.launch  mapping_stage.launch  roborts.launch  roborts_stage.launch  static_tf.launch
roborts_bringup/maps/: icra2018.pgm  icra2018.yaml  icra2019.pgm  icra2019.yaml  icra2020.pgm  icra2020.yaml
roborts_bringup/rviz/: mapping.rviz  roborts.rviz  teb_test.rviz
roborts_bringup/scripts/udev/: create_udev_rules.sh  delete_udev_rules.sh  roborts.rules
roborts_bringup/scripts/upstart/: create_upstart_service.sh  delete_upstart_service.sh  max_performance.sh  roborts-start.sh
roborts_bringup/worlds/: icra2018.world  icra2019.world  icra2020.world
roborts_camera/: CMakeLists.txt  camera_base.h  camera_node.cpp  camera_node.h  camera_param.cpp  camera_param.h  package.xml
roborts_camera/config/: camera_param.prototxt
roborts_camera/mvc/: CMakeLists.txt  CameraApi.h  CameraDefine.h  CameraStatus.h  mvc_driver.cpp  mvc_driver.h
roborts_camera/proto/: camera_param.proto
roborts_camera/test/: image_capture.cpp
roborts_camera/uvc/: CMakeLists.txt  uvc_driver.cpp  uvc_driver.h
roborts_common/: CMakeLists.txt  package.xml
roborts_common/cmake_module/: FindGTEST.cmake
roborts_common/include/alg_factory/: CMakeLists.txt  algorithm_factory.h
roborts_common/include/io/: CMakeLists.txt  io.h
roborts_common/include/state/: CMakeLists.txt  error_code.h  (+1 more)
roborts_common/math/: CMakeLists.txt  geometry.h  math.h
roborts_costmap/: CMakeLists.txt  package.xml
roborts_costmap/cmake_module/: FindProtoBuf.cmake
roborts_costmap/config/: costmap_parameter_config_for_decision.prototxt  costmap_parameter_config_for_local_plan.prototxt  obstacle_layer_config.prototxt
roborts_costmap/proto/: costmap_parameter_setting.proto  inflation_layer_setting.proto  obstacle_layer_setting.proto  static_layer_setting.proto
roborts_costmap/src/: costmap_2d.cpp  costmap_interface.cpp  costmap_layer.cpp  costmap_math.cpp  footprint.cpp  inflation_layer.cpp  layer.cpp  layered_costmap.cpp  observation_buffer.cpp  obstacle_layer.cpp  static_layer.cpp  test_costmap.cpp
roborts_decision/: CMakeLists.txt  behavior_test.cpp  package.xml
roborts_decision/behavior_tree/: behavior_node.h  behavior_state.h  behavior_tree.h
roborts_decision/blackboard/: blackboard.h
roborts_decision/cmake_module/: FindProtoBuf.cmake
roborts_decision/config/: decision.prototxt
roborts_decision/example_behavior/: back_boot_area_behavior.h  chase_behavior.h  escape_behavior.h  goal_behavior.h  line_iterator.h  patrol_behavior.h  search_behavior.h
roborts_decision/executor/: chassis_executor.cpp  chassis_executor.h  gimbal_executor.cpp  gimbal_executor.h
roborts_decision/proto/: decision.proto
roborts_decision/scripts/: BT.py  Blackboard.py  PyConfig.py  actionserver_test.py  gimbal_task.py  shooter_task.py  test_node.py
roborts_detection/: CMakeLists.txt  package.xml
roborts_detection/armor_detection/: CMakeLists.txt  armor_detection_algorithms.h  armor_detection_base.h  armor_detection_client.cpp  armor_detection_node.cpp  armor_detection_node.h  demo.prototxt  gimbal_control.cpp  gimbal_control.h  test.txt
roborts_detection/lightBlob_test/: lightBlob_test.cpp
roborts_detection/util/: CMakeLists.txt  cv_toolbox.h
roborts_localization/: CMakeLists.txt  localization_config.h  localization_math.cpp  localization_math.h  localization_node.cpp  localization_node.h  log.h  package.xml  types.h
roborts_localization/amcl/: CMakeLists.txt  amcl.cpp  amcl.h  amcl_config.h
roborts_localization/config/: localization.yaml
roborts_msgs/: CMakeLists.txt  package.xml
roborts_msgs/action/: ArmorDetection.action
roborts_msgs/msg/: GimbalAngle.msg  GimbalRate.msg  ShootState.msg  TwistAccel.msg
roborts_msgs/srv/: FricWhl.srv  ShootCmd.srv
roborts_planning/: CMakeLists.txt  package.xml
roborts_planning/cmake_module/: FindG2O.cmake
roborts_planning/global_planner/: CMakeLists.txt  global_planner_algorithms.h  global_planner_base.h  global_planner_node.cpp  global_planner_node.h  global_planner_test.cpp
roborts_planning/local_planner/: CMakeLists.txt
roborts_tracking/: CMakeLists.txt  package.xml  tracking_test.cpp  tracking_utility.cpp  tracking_utility.h
roborts_tracking/KCFcpp/: CMakeLists.txt
(+467 files in other folders)
