<package>
    <name>roborts</name>
    <version>1.0.0</version>
    <description>
        The roborts meta package provides all the functionality for RoboMaster AI Robot
    </description>
    <author>RoboMaster</author>
    <maintainer email="robomaster@dji.com">RoboMaster</maintainer>
    <license>GPL 3.0</license>
    <url>https://github.com/RoboMaster/RoboRTS</url>

    <buildtool_depend>catkin</buildtool_depend>
    <run_depend>roborts_base</run_depend>
    <run_depend>roborts_bringup</run_depend>
    <run_depend>roborts_camera</run_depend>
    <run_depend>roborts_common</run_depend>
    <run_depend>roborts_costmap</run_depend>
    <run_depend>roborts_decision</run_depend>
    <run_depend>roborts_localization</run_depend>
    <run_depend>roborts_msgs</run_depend>
    <run_depend>roborts_planning</run_depend>
    <run_depend>roborts_tracking</run_depend>

    <export>
        <metapackage/>
    </export>
</package>