<package>
    <name>roborts_decision</name>
    <version>1.0.0</version>
    <description>
        The roborts decision package provides decision-making for RoboMaster AI Robot
    </description>
    <author>RoboMaster</author>
    <maintainer email="robomaster@dji.com">RoboMaster</maintainer>
    <license>GPL 3.0 </license>
    <url>https://github.com/RoboMaster/RoboRTS</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>roborts_msgs</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>roborts_common</build_depend>
    <build_depend>roborts_costmap</build_depend>

    <run_depend>actionlib</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>roborts_msgs</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>roborts_common</run_depend>
    <run_depend>roborts_costmap</run_depend>

    <export>
    </export>

</package>
